Fix spacing issue caused by previous spacing issue fix;

--- a/source/stylesheets/index/_buttons-things2say.scss
+++ b/source/stylesheets/index/_buttons-things2say.scss
@@ -1,5 +1,6 @@
 .buttons-things2say-container {
   display: flex;
+  overflow:hidden;
 
   @include media-breakpoint-down(md) {
     margin-top: 7rem;
